Convert from ng-router to ui-router

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-  <div ng-view></div>
+  <div ui-view></div>
 
   <!-- UI Scripts -->
   <script src="/bower_components/foundation/js/foundation.min.js"></script>
