--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <!-- Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700|Oswald:300,400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700|Oswald:300,400,700' rel='stylesheet' type='text/css'>
 
   <!-- CSS -->
   <link rel="stylesheet" href="/dist/styles/bower.min.css">
