Add search engine description, add 2015 to title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html ng-app="khe">
 <head>
 
-  <title>Kent Hack Enough</title>
+  <title>Kent Hack Enough 2015</title>
+  <meta name="description" content="Design. Build. Party. Kent State's annual hackathon, October 9-11th 2015.">
 
   <!-- Behavioral Meta Data -->
   <meta name="apple-mobile-web-app-capable" content="yes">
